implement core face matching
